--- a/partials/_footer.scss
+++ b/partials/_footer.scss
@@ -4,27 +4,19 @@ footer {
 }
 
 section {
-
     display: flex;
     align-items: center;
-    justify-content: space-between;
-}
-
-.logos {
-    width: 20%;
-    display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
 
     ul {
-        width: 100%;
+    display: flex;
+    width: 20%;
+    justify-content: space-evenly;
+    align-items: center;
+    }
+
+    li {
+        text-align: center;
     }
 }
 
-
-.nomes {
-    text-align: center;
-}
-
-.laço {
-    width: 8%;
-}
