--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 * {
   padding: 0;
@@ -94,22 +93,14 @@ footer {
 section {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
 }
-
-.logos {
-  width: 20%;
+section ul {
   display: flex;
+  width: 20%;
   justify-content: space-evenly;
+  align-items: center;
 }
-.logos ul {
-  width: 100%;
-}
-
-.nomes {
+section li {
   text-align: center;
-}
-
-.laço {
-  width: 8%;
 }/*# sourceMappingURL=style.css.map */
